# purewater

./: .clang-format  .gitmodules  ChangeLog  LICENSE  README.md
.circleci/: config.yml
.github/workflows/: agent.yml  build_agent_for_linux.yml  build_agent_for_macos.yml  build_agent_for_window.yml  build_cc.yml  build_cc_docker.yml  cc.yml
agent/: .clang-format  .gitignore  CMakeLists.txt  README.md  buffer.c  buffer.h  config.h.in  conn.h  conn_pool.c  conn_pool.h  connect.c  connect.h  connection.c  connection.h  debug.h  dns.c  dns.h  dynbuf.c  dynbuf.h  event.c  event.h  http.c  http.h  http_header.c  http_header.h  linklist.c  linklist.h  llist.c  llist.h  main.c  net.c  net.h  network.c  network.h  platform.c  platform.h  proxy.c  proxy.h  proxy_https.c  proxy_https.h  (+16 more)
agent/src/: debug.h  dns.c  dns.h  main.c  net.c  net.h  proxy.c  proxy.h  socks.c  socks.h  util.c  util.h
agent/test/: CMakeLists.txt
agent/wbuild/: config.h
bot/: CMakeLists.txt  connection.h  http.c  main.c  url.h  util.c
cc/: .env  .gitignore  Dockerfile  README.md  admin.go  cc.go  cert.pem  config.go  console.go  database.go  db.sql  docker-compose.yml  go.mod  go.sum  key.pem  main.go  server.go  ssh.go  util.go  websocket.go
cc/admin/: admin.go  agent.go  listener.go  menu.go  view.go
cc/api/: agent.go  api.go  server.go
cc/database/: agent.go  datebase.go  mysql.go
cc/nginx/cert/: key.pem
cc/server/: dns.go  http.go  server.go  tcp.go  udp.go
cc/tunnel/: http.go
cc/util/: util.go
cnc/: Dockerfile  api.go  cnc.go  db.sql  docker-compose.yml  go.mod  go.sum  main.go  mysql.go
cnc/nginx/: nginx.conf
cnc/nginx/cert/: cert.pem
dashboard/: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
desktop/: .gitignore  CMakeLists.txt  README.md  mainwindow.ui  package.json
desktop/src/: main.js  mainwindow.ui
